- Fix temporarily standing on thin air when standing up on a falling loose tile
- Fix being able to press buttons through closed gates (Trick 1)
- Fix being able to grab ledges two stories down by bumping into a wall first
- Fix blood appearing on chompers when a skeleton is chomped
- Fix controls not being released during the drinking animation, causing unintended movement
- Add a way to crouch after climbing up (instead of climbing down again) by pressing down + forward
DONE: Increase the number of supported potion types to 32
- Quickloading is cancelled when a version string saved in QUICKSAVE.SAV does not match.
- Added rem_min and rem_tick to the quicksaved variables. The proposed penalty for quickloading is one minute subtracted from the saved remaining time.

Build changes:
DONE: Source code of the project has been added to GitHub.
CHANGE: Cleaned up and updated Makefile.
CHANGE: Added CMakeLists.txt for building using a CMake-based project model.
CHANGE: Added main.cpp and "extern C" declarations to allow compilation with a C++ compiler.
FIXED: Resolved warnings about multi-string literals by using an enum instead.

Refactorings:
CHANGE: Lots of things have changed with the switch to SDL2. To read about game migration from SDL1 to SDL2 in general, the SDL wiki provides a good overview at https://wiki.libsdl.org/MigrationGuide
CHANGE: The key_states[] array now has a size of SDL_NUM_SCANCODES and is indexed by SDL scancodes.
CHANGE: Modifier keys are now handled cleanly.
CHANGE: Removed unnecessary stuff (leftovers from the disassembly, or debug statements)
CHANGE: Many identifiers have been changed to better ones.
CHANGE: Added named enums for sound IDs, char_type.sword, timer IDs, colors, character frames and sequences.
CHANGE: Replaced a number of magic numbers in the code with their enum equivalents.
CHANGE: Sequence table deobfuscation.

License:
Added GPLv3 license (2015 June 27).